<resources>
    <string name="app_name">RahmaApp</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="userName">User Name</string>
    <string name="phone">Phone number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm password</string>
    <string name="register">Sign up</string>
    <string name="emptyFiled">Empty filed</string>
    <string name="passwordDontoMatch">Password must be matched</string>
    <string name="uploading">Loading</string>
    <string name="forgetPass">Forget  password ?</string>
    <string name="login">Login</string>
    <string name="donotHaveAccount">Do not Have Account ? register</string>
    <string name="addNewAddress">Add new address</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="addressName">Address name</string>
    <string name="typeAddressHere">type address here</string>
    <string name="homeNumber">Home Number</string>
    <string name="typeHomeNumberHere">Type home number here</string>
    <string name="flatNumber">Flat number</string>
    <string name="typeFlatNumberHere">Typ flat number here</string>
    <string name="add">Add</string>
    <string name="noData">No Data available now</string>
    <string name="food">Food</string>
    <string name="accessories">Accessories</string>
    <string name="addNewDonation">Add new donation</string>
    <string name="addressList">Address list</string>
    <string name="donationList">Donation list</string>
    <string name="setting">Setting</string>
    <string name="foodFor">Food is enough for</string>
    <string name="morethan10">More than 10 people</string>
    <string name="lessthan10">Less than 10 people</string>
    <string name="uploadImageFordonation">add donation image</string>
    <string name="donationDescription">Donation description</string>
    <string name="donationAddress">Donation address</string>
    <string name="publishAddress">Publish donation</string>
    <string name="moreThan3">More than 3 people</string>
    <string name="lessThan3">Less than 3 people</string>
    <string name="accessoriesNum">Accessories number</string>
    <string name="needCharityHelp">Need charity help ?</string>
    <string name="title_activity_mostafeed_home">Map</string>
    <string name="DonationAdded">Donation added</string>
    <string name="DonationSection">Donation Section</string>
    <string name="foodQuantity">Food quantity</string>
    <string name="donationPlace">Donation place</string>
    <string name="Receive_your_donation">Receive your donation</string>
    <string name="donationIsRecieved">Did you receive the donation?</string>
    <string name="iNeedThisDonation">Yes I need this donation</string>
    <string name="yesIRecieved">Yes i received</string>
    <string name="strillInRoad">Still in away</string>
    <string name="iDonotNeed">I do not need it</string>
    <string name="addNewEmployee">Add employee</string>
    <string name="showBeneficiaries">Show beneficiaries</string>
    <string name="showEmployee">Show employee</string>
    <string name="youAddedUserSuccessfully">You added employee successfully</string>
    <string name="foodForMore10">There is enough food for 10 people</string>
    <string name="foodForLess10">There is enough food for 3 people</string>
    <string name="accessoriesForMore10">There is enough accessories for 10 people</string>
    <string name="accessoriesForLess10">There is enough accessories for 3 people</string>
</resources>
