<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressName"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="13sp"
            android:hint="@string/typeAddressHere"
            android:id="@+id/etAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeNumber"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="13sp"
            android:hint="@string/typeHomeNumberHere"
            android:id="@+id/etHomeNum"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flatNumber"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="13sp"
            android:hint="@string/typeFlatNumberHere"
            android:id="@+id/etflatNum"
            android:inputType="number"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="10dp"
            android:text="@string/add"
            android:textColor="#fff"
            android:id="@+id/btnAdd"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>